--- a/exploratory_lr-Copy1.ipynb
+++ b/exploratory_lr-Copy1.ipynb
@@ -21,8 +21,12 @@
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "\n"
    ]
   },
   {
@@ -428,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_small, y, test_size=0.33, random_state=41)"
    ]
   },
